k8s/infrastructure/network/omada/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omada-controller
  namespace: omada
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: omada-controller
  template:
    metadata:
      labels:
        app: omada-controller
    spec:
      securityContext:
        runAsUser: 508
        runAsGroup: 508
        runAsNonRoot: true
        fsGroup: 508
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: omada-controller
        image: mbentley/omada-controller:5.15
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        resources:
          requests: {cpu: 100m, memory: 512Mi}
          limits:   {cpu: 750m, memory: 2Gi}
        volumeMounts:
          - name: omada-data
            mountPath: /opt/tplink/EAPController/data
          - name: omada-logs
            mountPath: /opt/tplink/EAPController/logs
          - name: omada-certs
            mountPath: /cert
            readOnly: true
      volumes:
      - name: omada-data
        persistentVolumeClaim:
          claimName: omada-data-pvc
      - name: omada-logs
        persistentVolumeClaim:
          claimName: omada-logs-pvc
      - name: omada-certs
        secret:
          secretName: cert-omada
          items:
            - key: tls.crt
              path: tls.crt
            - key: tls.key
              path: tls.key
      restartPolicy: Always
