k8s/infrastructure/network/omada/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: omada-tcp
  namespace: omada
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - name: omada-svc
          port: 29811   # PORT_MANAGER_V1
    - backendRefs:
        - name: omada-svc
          port: 29812   # PORT_ADOPT_V1
    - backendRefs:
        - name: omada-svc
          port: 29813   # PORT_UPGRADE_V1
    - backendRefs:
        - name: omada-svc
          port: 29814   # PORT_MANAGER_V2
    - backendRefs:
        - name: omada-svc
          port: 29815   # PORT_TRANSFER_V2
    - backendRefs:
        - name: omada-svc
          port: 29816   # PORT_RTTY
