k8s/infrastructure/network/omada/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: omada-route
  namespace: omada
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - omada.pc-tips.se
  rules:
    - backendRefs:
        - name: omada-svc
          port: 8043
